feat(T30373): Change the style from header and footer due to the concept of init
import font files for using different font weight
change the css in trumps css file in header and footer due to the concept
remove the icon due to current user, login btn and logout btn
to do this create twig files to override the core files

Ado #1937

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/token/_font-size.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/token/_font-size.scss
@@ -14,6 +14,7 @@
 
 // The numbers count from 0 (smallest possible size) up to 7 (biggest size used).
 // When on inuit 6, calculate those with https://github.com/modularscale/modularscale-sass.
+// The default font-size is 16px.
 $dp-font-size-0:                    11px !default;
 $dp-font-size-1:                    12px !default;
 $dp-font-size-2:                    14px !default;
