--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_oeb_header_userbox.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_oeb_header_userbox.html.twig
@@ -16,26 +16,27 @@
                 data-cy="currentUser">
 
                 {# if OrgaSwitcher user is a toeb, indicate with different color #}
-                <span class="{{ 'c-flyout__trigger-inner'|prefixClass }} {{ hasOrgaSwitcher and hasPermission('role_participant') ? 'color--highlight'|prefixClass : '' }}" data-extern-dataport="userMenuTrigger">
+                {%  block loggedCurrentUser %}
+                    <span class="{{ 'c-flyout__trigger-inner'|prefixClass }} {{ hasOrgaSwitcher and hasPermission('role_participant') ? 'color--highlight'|prefixClass : '' }}" data-extern-dataport="userMenuTrigger">
 
-                    {% if hasOrgaSwitcher %} {# if there are two sessions, indicate this by appending another icon to trigger. #}
+                        {% if hasOrgaSwitcher %} {# if there are two sessions, indicate this by appending another icon to trigger. #}
 
-                        {# if OrgaSwitcher user is a toeb, additionally indicate with different user icon #}
-                        <i class="{{ 'fa u-mr-0_125'|prefixClass }} {{ hasPermission('role_participant') ? 'fa-user-circle-o'|prefixClass : 'fa-user'|prefixClass }}" aria-hidden="true"></i>
+                            {# if OrgaSwitcher user is a toeb, additionally indicate with different user icon #}
+                            <i class="{{ 'fa u-mr-0_125'|prefixClass }} {{ hasPermission('role_participant') ? 'fa-user-circle-o'|prefixClass : 'fa-user'|prefixClass }}" aria-hidden="true"></i>
 
-                        {{ currentUser.firstname }} {{ currentUser.lastname }}
-                        <i class="{{ 'fa fa-exchange u-ml-0_125'|prefixClass }}" aria-hidden="true"></i>
+                            {{ currentUser.firstname }} {{ currentUser.lastname }}
+                            <i class="{{ 'fa fa-exchange u-ml-0_125'|prefixClass }}" aria-hidden="true"></i>
 
-                    {% else %}
+                        {% else %}
 
-                        {# this is what normal users see #}
-                        <i class="{{ 'fa fa-user u-mr-0_125'|prefixClass }}" aria-hidden="true"></i>
-                        {{ currentUser.firstname }} {{ currentUser.lastname }}
+                            {# this is what normal users see #}
+                            <i class="{{ 'fa fa-user u-mr-0_125'|prefixClass }}" aria-hidden="true"></i>
+                            {{ currentUser.firstname }} {{ currentUser.lastname }}
 
-                    {% endif %}
+                        {% endif %}
 
-                </span>
-
+                    </span>
+                {%  endblock loggedCurrentUser %}
             </a>
 
             {# flyout content #}
@@ -225,10 +226,14 @@
                     aria-label="{{ 'login'|trans }}. {{ "explanation.login.gateway"|trans }}"
                     data-touch-flyout="loginLink"
                     id="loginLink">
-                    <span class="{{ 'c-flyout__trigger-inner'|prefixClass }}">
-                        <i class="{{ 'fa fa-user'|prefixClass }}" aria-hidden="true"></i>
-                        {{ "login"|trans }}
-                    </span>
+
+                    {% block loginbtnGateway %}
+                        <span class="{{ 'c-flyout__trigger-inner'|prefixClass }}">
+                            <i class="{{ 'fa fa-user'|prefixClass }}" aria-hidden="true"></i>
+                            {{ "login"|trans }}
+                        </span>
+                    {% endblock loginbtnGateway %}
+
                 </a>
 
                 {# flyout with information about gateway login #}
@@ -250,10 +255,13 @@
             {% elseif projectType == 'portal' %}
 
                 <a class="{{ 'c-flyout__trigger'|prefixClass }}" href="{{ path('DemosPlan_user_login_alternative') }}" id="loginLink">
-                    <span class="{{ 'c-flyout__trigger-inner'|prefixClass }}">
-                        <i class="{{ 'fa fa-user'|prefixClass }}" aria-hidden="true"></i>
-                        {{ "login"|trans }}
-                    </span>
+
+                    {%  block loginbtn %}
+                        <span class="{{ 'c-flyout__trigger-inner'|prefixClass }}">
+                            <i class="{{ 'fa fa-user'|prefixClass }}" aria-hidden="true"></i>
+                            {{ "login"|trans }}
+                        </span>
+                    {%  endblock loginbtn %}
                 </a>
 
             {% endif %}
