feat (ref T29403): Add Validation for updating a user. Wraped in transaction. Change the order of methods within getOrgaHandleRequestedOrgaData() to only remove a user once from his old orga. Implemented a new way to compare if the content of two Arrays are equal, because the order of the elements doesn't matter and isn't ordered by guarantee. Change url of login button to redirect the user to keycloak.(ADO #1458)

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_oeb_header_userbox.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_oeb_header_userbox.html.twig
@@ -249,7 +249,7 @@
 
             {% elseif projectType == 'portal' %}
 
-                <a class="{{ 'c-flyout__trigger'|prefixClass }}" href="{{ path('DemosPlan_user_login_alternative') }}" id="loginLink">
+                <a class="{{ 'c-flyout__trigger'|prefixClass }}" href="{{ getStaticVariable('login_path') }}" id="loginLink">
                     <span class="{{ 'c-flyout__trigger-inner'|prefixClass }}">
                         <i class="{{ 'fa fa-user'|prefixClass }}" aria-hidden="true"></i>
                         {{ "login"|trans }}
