fix (ref T29403): Adjust another login link to redirect to keycloak. (ADO #1458)

--- a/templates/bundles/DemosPlanMapBundle/DemosPlanMap/map_public_participation_detail.html.twig
+++ b/templates/bundles/DemosPlanMapBundle/DemosPlanMap/map_public_participation_detail.html.twig
@@ -218,7 +218,7 @@
                         <p class="{{ 'c-actionbox__hint show-lap-up'|prefixClass }}">
                             {{ 'statement.map.require_login'|trans({
                                 class: 'c-actionbox__link'|prefixClass,
-                                href: path(projectType == 'gateway' ? 'DemosPlan_misccontent_static_how_to_login' : 'DemosPlan_user_login_alternative')
+                                href: getStaticVariable('login_path')
                             })|wysiwyg }}
                         </p>
                     {% endblock login_link %}
