feat (ref T29403): Adjust login redirect. Set project type to "gateway", adjust permissions to disable the hover of the login button. Add a template override for redirecting over "Melden Sie sich an". (ADO #1458)

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_oeb_header_userbox.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/base_oeb_header_userbox.html.twig
@@ -254,7 +254,7 @@
 
             {% elseif projectType == 'portal' %}
 
-                <a class="{{ 'c-flyout__trigger'|prefixClass }}" href="{{ getStaticVariable('login_path') }}" id="loginLink">
+                <a class="{{ 'c-flyout__trigger'|prefixClass }}" href="{{ path('DemosPlan_user_login_alternative') }}" id="loginLink">
 
                     {%  block loginButton %}
                         <span class="{{ 'c-flyout__trigger-inner'|prefixClass }}">
