refac(T30217): remove responsive padding-left, remove map_public_participation_detail.html.twig from diplanbau (ADO 1937)

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/participation_area_skeleton.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/participation_area_skeleton.html.twig
@@ -10,6 +10,7 @@
         prefixCssClass: true,
         content_heading: content_heading|default,
         content_subheading: content_subheading|default,
+        content_introduction: content_introduction|default,
         full_width: full_width_pageheader|default(false)
     } %}
 {% endblock title_text %}
