refac(T30217): remove pageheader.html.twig from DiPlanbau project, override pageheader styling with already existing css (ADO 1937)

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_pageheader.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_pageheader.scss
@@ -62,4 +62,8 @@
     &__subtitle {
         color: $pageheader-color;
     }
+
+    &__introduction {
+        font-size: $dp-font-size-4;
+    }
 }
