--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/pageheader.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/pageheader.html.twig
@@ -86,15 +86,15 @@
 
                 {# subheading #}
                 {% if content_subheading|default != '' %}
-                    <div class="{{ 'display--inline-block u-mt-0_25'|prefixClass }}">
+                    <div class="{{ 'c-pageheader__subtitle display--inline-block u-mt-0_25'|prefixClass }}">
                         {{ content_subheading|wysiwyg }}
                     </div>
                 {% endif %}
 
                 {# introduction #}
                 {% if content_introduction|default != '' %}
-                    <div class="{{ 'display--inline-block u-mt-0_25'|prefixClass }}">
-                        {{ content_info|wysiwyg }}
+                    <div class="{{ 'c-pageheader__introduction display--inline-block u-mt-0_25'|prefixClass }}">
+                        {{ content_introduction|wysiwyg }}
                     </div>
                 {% endif %}
             </div>
