fix(refs T30059): Prvent Layer from being added multiple times
- OL works well by its own. It doesn't like to get updated polygons all the time
- let it do its own magic.
- so we just have to pass the initial value in he beginning, thats it.

--- a/templates/bundles/DemosPlanMapBundle/DemosPlanMap/map_admin.html.twig
+++ b/templates/bundles/DemosPlanMapBundle/DemosPlanMap/map_admin.html.twig
@@ -153,7 +153,7 @@
                     <dp-map-view
                         procedure-id="{{ procedure }}"
                         procedure-coordinates="{{ templateVars.mapglobals.procedure.settings.coordinate }}"
-                        procedure-territory="{{ templateVars.territory }}"
+                        procedure-territory="{{ templateVars.territory|default('{}') }}"
                     >
                     </dp-map-view>
                 </div>
