refac(T30217): reset-button: change style in core (ADO 1937)

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_proceduresearch.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_proceduresearch.scss
@@ -40,6 +40,13 @@
             margin-top: 24px;
         }
 
+        &__reset-btn {
+            background-color: transparent;
+            border: none;
+            color: $dp-color-main;
+            cursor: pointer;
+        }
+
         &__search-field {
             flex-grow: 1;
             max-width: calc(100% - 24px);
