--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_proceduresearch.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/components/_proceduresearch.scss
@@ -32,6 +32,7 @@
             width: calc(100% + 24px);
             margin-left: -24px;
             margin-top: -24px;
+            margin-bottom: 12px;
         }
 
         &__search-field,
