--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_detail_form_confirmation.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_detail_form_confirmation.html.twig
@@ -36,7 +36,7 @@
         <a
             class="{{ 'btn btn--primary u-1-of-1-palm'|prefixClass }}"
             data-cy="pdfStatementDownload"
-            href="{{ path('DemosPlan_statement_single_export_pdf',{'sId':draftStatementIdent ,'procedure':procedure}) }}"
+            href="{{ path('DemosPlan_statement_single_export_pdf',{ sId: draftStatementIdent, procedure: procedure }) }}"
             name="pdfStatement"
             target="_blank">
             <i class="{{ 'fa fa-file'|prefixClass }}" aria-hidden="true"></i>
