--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_detail_form_confirmation.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_detail_form_confirmation.html.twig
@@ -47,7 +47,7 @@
             <a
                 class="{{ 'btn btn--secondary'|prefixClass }}"
                 data-cy="statementFormClose"
-                href="{{ path('DemosPlan_procedure_public_detail', {'procedure': procedure}) }}">
+                href="{{ path('DemosPlan_procedure_public_detail', { procedure: procedure }) }}">
                 {{ "close"|trans }}
             </a>
         </span>
