fix(T29774): Give to the personal data link another style and open in a new blank

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_link.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_link.scss
@@ -99,7 +99,8 @@
         &::before {
             @extend .fa;
 
-            padding-right: .5em;
+            padding-left: .2em;
+            padding-right: .2em;
             content: $fa-var-external-link;
             font-size: .85em;
         }
