fix(T30510): Give to the icon a smaller size so that it is central due to his belonging menulink

--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/pageheader.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanCore/includes/pageheader.html.twig
@@ -29,7 +29,7 @@
                             class="{{ 'c-pageheader__link'|prefixClass }}"
                             data-cy="backTo"
                             href="{{ link }}">
-                            <i class="{{ 'fa fa-lg fa-angle-left'|prefixClass }}" aria-hidden="true"></i> {{ link_caption|default }}
+                            <i class="{{ 'fa fa-angle-left'|prefixClass }}" aria-hidden="true"></i> {{ link_caption|default }}
                         </a>
                     {% endif %}
 
