fix(T30510): Remove commit from other PR

--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_link.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/objects/_link.scss
@@ -99,7 +99,7 @@
         &::before {
             @extend .fa;
 
-            padding-left: .5em;
+            padding-right: .5em;
             content: $fa-var-external-link;
             font-size: .85em;
         }
