feat: do not load tiptap bundle anymore
The tiptap dependency is bundled within demosplan-ui,
while it is not used directly within demosplan-core anymore.
That's why we do not have to load it here!

--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/dhtml/v1/assessment_table_new_statement.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/dhtml/v1/assessment_table_new_statement.html.twig
@@ -2,7 +2,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'assessmenttable-assessmentTableNewStatement.js']) }}
+    {{ webpackBundles(['assessmenttable-assessmentTableNewStatement.js']) }}
 {% endblock javascripts %}
 
 {% block component_part %}
