--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanFaq/faq_admin_edit.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanFaq/faq_admin_edit.html.twig
@@ -154,5 +154,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'faq-faqAdminEdit.js']) }}
+    {{ webpackBundles(['faq-faqAdminEdit.js']) }}
 {% endblock javascripts %}
