--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanFaq/faq_admin_new.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanFaq/faq_admin_new.html.twig
@@ -128,5 +128,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'faq-faqAdminNew.js']) }}
+    {{ webpackBundles(['faq-faqAdminNew.js']) }}
 {% endblock javascripts %}
