--- a/templates/bundles/DemosPlanCoreBundle/DemosPlanStatement/statement_anonymize.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/DemosPlanStatement/statement_anonymize.html.twig
@@ -33,5 +33,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'statement-statementAnonymize.js']) }}
+    {{ webpackBundles(['statement-statementAnonymize.js']) }}
 {% endblock javascripts %}
