--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/paragraph_admin_edit.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/paragraph_admin_edit.html.twig
@@ -97,6 +97,6 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'document-paragraphAdminEdit.js']) }}
+    {{ webpackBundles(['document-paragraphAdminEdit.js']) }}
 {% endblock javascripts %}
 
