--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/paragraph_admin_new.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/paragraph_admin_new.html.twig
@@ -89,5 +89,5 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'document-paragraphAdminNew.js']) }}
+    {{ webpackBundles(['document-paragraphAdminNew.js']) }}
 {% endblock javascripts %}
