--- a/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_edit.html.twig
+++ b/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_edit.html.twig
@@ -69,5 +69,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'forum-developmentReleaseEdit.js']) }}
+    {{ webpackBundles(['forum-developmentReleaseEdit.js']) }}
 {% endblock javascripts %}
