--- a/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_new.html.twig
+++ b/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_new.html.twig
@@ -65,5 +65,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'forum-developmentReleaseNew.js']) }}
+    {{ webpackBundles(['forum-developmentReleaseNew.js']) }}
 {% endblock javascripts %}
