--- a/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_story_edit.html.twig
+++ b/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_story_edit.html.twig
@@ -43,5 +43,5 @@
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'forum-developmentReleaseStoryEdit.js']) }}
+    {{ webpackBundles(['forum-developmentReleaseStoryEdit.js']) }}
 {% endblock %}
