--- a/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_story_threadentry_edit.html.twig
+++ b/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_story_threadentry_edit.html.twig
@@ -92,5 +92,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'forum-forumDevelopmentReleaseStoryThreadentryEdit.js']) }}
+    {{ webpackBundles(['forum-forumDevelopmentReleaseStoryThreadentryEdit.js']) }}
 {% endblock javascripts %}
