--- a/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_story_threadentry_new.html.twig
+++ b/templates/bundles/DemosPlanForumBundle/DemosPlanForum/development_release_story_threadentry_new.html.twig
@@ -49,5 +49,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'forum-forumDevelopmentReleaseStoryThreadentryNew.js']) }}
+    {{ webpackBundles(['forum-forumDevelopmentReleaseStoryThreadentryNew.js']) }}
 {% endblock javascripts %}
