--- a/templates/bundles/DemosPlanNewsBundle/DemosPlanNews/news_admin_edit.html.twig
+++ b/templates/bundles/DemosPlanNewsBundle/DemosPlanNews/news_admin_edit.html.twig
@@ -376,5 +376,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'news-newsAdminEdit.js']) }}
+    {{ webpackBundles(['news-newsAdminEdit.js']) }}
 {% endblock javascripts %}
