--- a/templates/bundles/DemosPlanNewsBundle/DemosPlanNews/news_admin_new.html.twig
+++ b/templates/bundles/DemosPlanNewsBundle/DemosPlanNews/news_admin_new.html.twig
@@ -269,5 +269,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'news-newsAdminNew.js']) }}
+    {{ webpackBundles(['news-newsAdminNew.js']) }}
 {% endblock javascripts %}
