--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_convert_annotated_pdf.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_convert_annotated_pdf.html.twig
@@ -30,5 +30,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'procedure-administrationConvertAnnotatedPdf.js']) }}
+    {{ webpackBundles(['procedure-administrationConvertAnnotatedPdf.js']) }}
 {% endblock javascripts %}
