--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit.html.twig
@@ -1264,5 +1264,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'procedure-administrationEdit.js']) }}
+    {{ webpackBundles(['procedure-administrationEdit.js']) }}
 {% endblock javascripts %}
