--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit_boilerplate.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit_boilerplate.html.twig
@@ -121,5 +121,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'procedure-administrationEditBoilerplate.js']) }}
+    {{ webpackBundles(['procedure-administrationEditBoilerplate.js']) }}
 {% endblock javascripts %}
