--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit_procedure_proposal.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_edit_procedure_proposal.html.twig
@@ -92,5 +92,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['procedure-administrationEditProcedureProposal.js', 'tiptap.js', 'ol.js']) }}
+    {{ webpackBundles(['procedure-administrationEditProcedureProposal.js', 'ol.js']) }}
 {% endblock javascripts %}
