--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_member_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_member_email.html.twig
@@ -169,5 +169,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['procedure-administrationMemberEmail.js', 'tiptap.js']) }}
+    {{ webpackBundles(['procedure-administrationMemberEmail.js']) }}
 {% endblock javascripts %}
