--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_procedure_type_edit.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_procedure_type_edit.html.twig
@@ -141,5 +141,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'procedure-administrationProcedureTypeEdit.js']) }}
+    {{ webpackBundles(['procedure-administrationProcedureTypeEdit.js']) }}
 {% endblock javascripts %}
