--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_send_email.html.twig
@@ -92,5 +92,5 @@
 {#  bundles generated via webpack/gulp build are included here  #}
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'procedure-administrationSendEmail.js']) }}
+    {{ webpackBundles(['procedure-administrationSendEmail.js']) }}
 {% endblock javascripts %}
