--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_split_statement.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_split_statement.html.twig
@@ -11,5 +11,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'procedure-administrationSplitStatement.js']) }}
+    {{ webpackBundles(['procedure-administrationSplitStatement.js']) }}
 {% endblock javascripts %}
