--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_statement_segments_list.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_statement_segments_list.html.twig
@@ -23,5 +23,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'ol.js', 'procedure-administrationStatementSegmentsList.js']) }}
+    {{ webpackBundles(['ol.js', 'procedure-administrationStatementSegmentsList.js']) }}
 {% endblock javascripts %}
