--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_unregistered_publicagency_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_unregistered_publicagency_email.html.twig
@@ -134,5 +134,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['procedure-administrationUnregisteredPublicagencyEmail.js', 'tiptap.js']) }}
+    {{ webpackBundles(['procedure-administrationUnregisteredPublicagencyEmail.js']) }}
 {% endblock javascripts %}
