--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_procedure_proposal.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_procedure_proposal.html.twig
@@ -82,5 +82,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['procedure-publicProcedureProposal.js', 'tiptap.js', 'ol.js']) }}
+    {{ webpackBundles(['procedure-publicProcedureProposal.js', 'ol.js']) }}
 {% endblock javascripts %}
