--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/edit_tag.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/edit_tag.html.twig
@@ -117,5 +117,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'statement-editTag.js']) }}
+    {{ webpackBundles(['statement-editTag.js']) }}
 {% endblock javascripts %}
