--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/fragment_statement.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/fragment_statement.html.twig
@@ -282,5 +282,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'statement-fragmentStatement.js']) }}
+    {{ webpackBundles(['statement-fragmentStatement.js']) }}
 {% endblock javascripts %}
