--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/list_statement_fragments.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/list_statement_fragments.html.twig
@@ -52,5 +52,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['statement-listStatementFragments.js', 'tiptap.js']) }}
+    {{ webpackBundles(['statement-listStatementFragments.js']) }}
 {% endblock javascripts %}
