--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/list_statement_fragments_archive.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/list_statement_fragments_archive.html.twig
@@ -44,5 +44,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'statement-listStatementFragmentsArchive.js']) }}
+    {{ webpackBundles(['statement-listStatementFragmentsArchive.js']) }}
 {% endblock javascripts %}
