--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/customer_settings_update_mail.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/customer_settings_update_mail.html.twig
@@ -79,5 +79,5 @@
 {#  bundles generated via webpack/gulp build are included here  #}
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'user-customersettingsmail.js']) }}
+    {{ webpackBundles(['user-customersettingsmail.js']) }}
 {% endblock javascripts %}
