--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/edit_orga.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/edit_orga.html.twig
@@ -39,5 +39,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'user-editOrga.js']) }}
+    {{ webpackBundles(['user-editOrga.js']) }}
 {% endblock javascripts %}
