--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_survey_form.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_survey_form.html.twig
@@ -77,5 +77,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'procedure-administrationNewSurvey.js']) }}
+    {{ webpackBundles(['procedure-administrationNewSurvey.js']) }}
 {% endblock javascripts %}
