--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/list_orgas.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/list_orgas.html.twig
@@ -67,5 +67,5 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {{ webpackBundles(['tiptap.js', 'user-listOrgas.js'])}}
+    {{ webpackBundles(['user-listOrgas.js'])}}
 {% endblock javascripts %}
