fix(refs T30453): Use masterTemplateId instead of masterBlueprintId
It was meant to be Template.
We want to move forward to distinguish blueprint

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_new.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_new.html.twig
@@ -5,7 +5,7 @@
         {{ "procedure.new"|trans }}
     </h1>
     {% if hasPermission('feature_procedure_templates') %}
-        {% set masterBlueprintId = templateVars.masterBlueprintId %}
+        {% set masterBlueprintId = templateVars.masterTemplateId %}
         {% set copyMasterOptions = [{ label: 'master.empty', value: masterBlueprintId, isMaster: true }] %}
         {% if templateVars.list.procedures is defined %}
             {% for procedure in templateVars.list.procedures %}
