fix(T30794): Set correct methods for limits

--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/dhtml/v1/assessment_table_original_view.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/dhtml/v1/assessment_table_original_view.html.twig
@@ -28,7 +28,7 @@
                 current_page: {{ templateVars.pager.currentPage|default(1) }},
                 per_page: {{ templateVars.pager.maxPerPage|default(1) }},
                 count: {{ templateVars.totalResults|default(1) }},
-                limits: [{{ templateVars.pager.limits|default(1) }}]
+                limits: [{{ templateVars.pager.limits|default(1)|join(',') }}]
             }"
             procedure-id="{{ templateVars.table.procedure.ident }}"
         >
