--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/elements_admin_list.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/elements_admin_list.html.twig
@@ -77,6 +77,16 @@
                 )
             }}
 
+            {% if hasPermission('feature_auto_switch_element_state') %}
+                <div class="u-mt-0_75">
+                    <dp-checkbox
+                        id="r_publish_categories"
+                        checked
+                        :label="{ text: Translator.trans('element.state.autoswitch', { state: Translator.trans('published') }) }"
+                        name="r_publish_categories">
+                    </dp-checkbox>
+                </div>
+            {% endif %}
             <input
                 class="btn btn--primary u-mt-0_75 float--right"
                 data-cy="submitImport"
