feature(refs T30480): send true value when checkbox is checked
- The backend expects a true value if the documents uploaded shall be published automatically when uploaded new documents hence the value-to-send needs to be set to true in this case

--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/elements_admin_list.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/elements_admin_list.html.twig
@@ -82,6 +82,7 @@
                     <dp-checkbox
                         id="r_publish_categories"
                         checked
+                        value-to-send="true"
                         :label="{ text: Translator.trans('element.state.autoswitch', { state: Translator.trans('published') }) }"
                         name="r_publish_categories">
                     </dp-checkbox>
