--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/elements_admin_import.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/elements_admin_import.html.twig
@@ -11,6 +11,16 @@
         </p>
 
         {% include "@DemosPlanDocument/DemosPlanDocument/elements_admin_import_entry.html.twig" %}
+        {% if hasPermission('feature_auto_switch_element_state') %}
+            <div class="u-mt-0_75">
+                <dp-checkbox
+                    id="r_publish_categories"
+                    checked
+                    :label="{ text: Translator.trans('element.state.autoswitch', { state: Translator.trans('published') }) }"
+                    name="r_publish_categories">
+                </dp-checkbox>
+            </div>
+        {% endif %}
 
         <p class="hide-visually text--right">
             <img src="{{ asset('img/ajax-loader.gif') }}"> Uploadstatus: <span id="js_uploadProgressProcessed">0</span> von <span id="js_uploadProgressTotal">0</span>
