bug(refs T29194): Change translation key
Some time ago all references for publicagency were changed to invitable_institution.

--- a/templates/bundles/DemosPlanUserBundle/DemosPlanUser/unregistered_publicagency_list.html.twig
+++ b/templates/bundles/DemosPlanUserBundle/DemosPlanUser/unregistered_publicagency_list.html.twig
@@ -15,7 +15,7 @@
     <dp-toggle-form
         class="u-mt"
         form-id="newUnregisteredPublicAgency"
-        title="{{ 'publicagency.add'|trans }}">
+        title="{{ 'invitable_institution.add'|trans }}">
         {# Add new unregistered toeb #}
         <form
             id="newUnregisteredPublicAgency"
