fix(refs:T17648): Set as value an empty string in the placeholder for cc for email to unregistered institution

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_unregistered_publicagency_email.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/administration_unregistered_publicagency_email.html.twig
@@ -84,7 +84,7 @@
                 elements: [
                     {
                         label: { text: 'email.cc'|trans, hint: 'explanation.email.cc' },
-                        control: { name: 'r_emailCc', value: templateVars.procedure.settings.emailCc|default },
+                        control: { name: 'r_emailCc', value: '' },
                         type: 'text'
                     }
                 ]
