--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/elements_admin_import.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/elements_admin_import.html.twig
@@ -17,7 +17,7 @@
                 class="u-mt-0_75"
                 id="r_publish_categories"
                 checked
-                :label="{ text: Translator.trans('element.state.publish', { state: Translator.trans('published') }) }"
+                :label="{ text: Translator.trans('element.state.publish') }"
                 name="r_publish_categories">
             </dp-checkbox>
         {% endif %}
