--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/includes/actionbox.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/includes/actionbox.html.twig
@@ -19,6 +19,7 @@
             @click.stop.prevent="toggleStatementModal({})"
             class="{{ 'c-actionbox__title--button is-active font-size-h1 u-mb-0_5 has-i'|prefixClass }} {{ context == 'statements' ? 'u-nojs-hide--block'|prefixClass : '' }}"
             aria-controls="statementModal"
+            data-cy="statementModal"
             aria-describedby="statementActionDescription{{ context|capitalize }}"
             role="button"
         >
