fix(refs:T30875): Make a better description for showing public phase and public contexthelp

--- a/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_detail.html.twig
+++ b/templates/bundles/DemosPlanProcedureBundle/DemosPlanProcedure/public_detail.html.twig
@@ -135,7 +135,7 @@
                                     ({{ proceduresettings.settings.legalNotice }})
                                 {% endif %}
                             {% endapply %}
-                            {# Display public procedure phase (not depending on role) #}
+                            {# Display public procedure phase without login or logged as citizen  #}
                             {{ getProcedurePhase(proceduresettings, 'public') }}
                             {{- contextualHelp('help.public.detail.phase.'~ getProcedurePhaseKey(proceduresettings, 'public'), ['o-tooltip--question-circle'|prefixClass, 'c-infolist__help u-ml-0_25'|prefixClass]) -}}
                         </div><!--
