--- a/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_width.scss
+++ b/demosplan/DemosPlanCoreBundle/Resources/client/scss/utility/_width.scss
@@ -34,7 +34,7 @@
 $width-map-px: (
     'max-width': (350, 600),
     'min-width': (25),
-    'width': (16, 20, 25, 40, 60, 100, 120, 160, 200, 250, 300, 350, 450, 600)
+    'width': (16, 20, 25, 40, 60, 85, 100, 120, 160, 200, 250, 300, 350, 450, 600)
 );
 @each $property, $widths in $width-map-px {
     @each $width in $widths {
