chore (refs T30977): adjust obscure props with Permission in Editor.

--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/shared/v1/assessment_statement_detail_statement_text.html.twig
@@ -26,7 +26,7 @@
                                     procedure-id="{{ templateVars.table.procedure.ident }}"
                                     :toolbar-items="{
                                         insertAndDelete: true,
-                                        obscure: true,
+                                        obscure: hasPermission('feature_obscure_text'),
                                         mark: true
                                     }"
                                     :value="JSON.parse('{{ statement.text|json_encode|e('js') }}')">
