--- a/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/dhtml/v1/assessment_table_new_statement.html.twig
+++ b/templates/bundles/DemosPlanAssessmentTableBundle/DemosPlan/dhtml/v1/assessment_table_new_statement.html.twig
@@ -517,7 +517,7 @@
                             required
                             :toolbar-items="{
                                 insertAndDelete: true,
-                                obscure: true,
+                                obscure: hasPermission('feature_obscure_text'),
                                 mark: true,
                                 strikethrough: true
                             }"
