--- a/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/includes/fragment_statement_form.html.twig
+++ b/templates/bundles/DemosPlanStatementBundle/DemosPlanStatement/includes/fragment_statement_form.html.twig
@@ -17,7 +17,7 @@
         :toolbar-items="{
             strikethrough: true,
             mark: true,
-            obscure: true
+            obscure: hasPermission('feature_obscure_text')
          }"
         v-model="fragmentText">
     </dp-editor>
