chore (refs T31116): Add file-route Props for (dp-upload-files & dp-editor) components.
- remove this sting value from demosplan-ui.

--- a/templates/bundles/DemosPlanCoreBundle/Extension/fileupload.html.twig
+++ b/templates/bundles/DemosPlanCoreBundle/Extension/fileupload.html.twig
@@ -38,6 +38,7 @@
         :allow-multiple-uploads="{{ maxfiles > 1 ? 'true' : 'false' }}"
         :allowed-file-types="JSON.parse('{{ type|default( "pdf" )|json_encode|e('js', 'utf-8') }}')"
         :chunk-size="{{ chunksize|default('Infinity') }}"
+        file-route="core_file"
         name="{{ field_name|default }}"
         :max-file-size="{{ maxfilesize }}"
         :max-number-of-files="{{ maxfiles|default(1) }}"
