--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/includes/single_document_file_upload.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/includes/single_document_file_upload.html.twig
@@ -2,6 +2,7 @@
     <dp-upload-files
         id="r_document"
         allowed-file-types="pdf-zip-video"
+        file-route="core_file"
         :label="{
           hint: Translator.trans('file.upload.pdf.zip.mp4'),
           text: Translator.trans('file')
@@ -17,6 +18,7 @@
     <dp-upload-files
         id="r_document"
         allowed-file-types="pdf-video"
+        file-route="core_file"
         :label="{
           hint: Translator.trans('file.upload.pdf.mp4'),
           text: Translator.trans('file')
