--- a/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/paragraph_admin_new.html.twig
+++ b/templates/bundles/DemosPlanDocumentBundle/DemosPlanDocument/paragraph_admin_new.html.twig
@@ -63,6 +63,7 @@
             class="u-mb"
             hidden-input="r_text"
             ref="r_text"
+            file-route="core_file"
             :toolbar-items="{
                 imageButton: true,
                 insertAndDelete: true,
